# ADeller_2020B

./: README
applications/calcif2/src/: calcif2.c  difxcalc.c  difxcalc.h  difxvmf.c  poly.c  poly.h  timeutils.c  timeutils.h  vmf.c  vmf.h  vmf3.c  vmf3.h  wxdata.c  wxdata.h
applications/calcserver/calc9.1/: Makefile.am
applications/difx2fits/src/: difx2fits.c  fitsAG.c  fitsAN.c  fitsCT.c  fitsFL.c  fitsFR.c  fitsGD.c  fitsGM.c  fitsGN.c  fitsHeader.c  fitsMC.c  fitsML.c  fitsPH.c  fitsSO.c  fitsSU.c  fitsTS.c  fitsUV.c  fitsUV.h  fitsWR.c  jobmatrix.c  jobmatrix.h  sniffer.c  sniffer.h  util.c  util.h
applications/difx2fits/utils/: makefits
applications/mk5daemon/mk5dir/: checkdir  fileto5c.cpp  mark5dir.cpp  mark5dir.h  mk5cp.cpp  mk5dir.cpp  mk5erase.cpp  mk5lock.cpp  mk5putdir.cpp  mk5test.cpp  record5c.cpp  recover.cpp  testmod.cpp  vsn.cpp  watchdog.cpp  watchdog.h
applications/mk5daemon/src/: condition.cpp  datacopy.cpp  difx.cpp  getdir.cpp  loadmon.cpp  logger.cpp  logger.h  mark5a.cpp  mk5daemon.cpp  mk5daemon.h  modules.cpp  monitor.cpp  proc.cpp  ssversions.cpp  swap.cpp  swap.h  swapmon.cpp  vsis.cpp  vsis_commands.cpp  vsis_commands.h  watchdog.cpp  watchdog.h
applications/mk5daemon/utils/: listcpus  listmedia  listmodules  mk5control
applications/vex2difx/: configure.ac
applications/vex2difx/src/: applycorrparams.cpp  applycorrparams.h  autobands.cpp  autobands.h  corrparams.cpp  corrparams.h  evladefaults.h  freq.cpp  freq.h  job.cpp  job.h  jobflag.cpp  jobflag.h  jobgroup.cpp  jobgroup.h  makejobs.cpp  makejobs.h  mediachange.cpp  mediachange.h  parserhelp.cpp  parserhelp.h  sanitycheck.cpp  sanitycheck.h  shelves.cpp  shelves.h  timeutils.cpp  timeutils.h  vex2difx.cpp  vexpeek.cpp  zoomfreq.cpp  zoomfreq.h
applications/vex2difx/utilities/: Makefile.am  oms2v2d  vlog
applications/vex2difx/vexdatamodel/: event.cpp  event.h  interval.cpp  interval.h  vex_antenna.cpp  vex_antenna.h  vex_basebanddata.cpp  vex_basebanddata.h  vex_channel.cpp  vex_channel.h  vex_clock.cpp  vex_clock.h  vex_data.cpp  vex_data.h  vex_eop.cpp  vex_eop.h  vex_exper.cpp  vex_exper.h  vex_if.cpp  vex_if.h  vex_mode.cpp  vex_mode.h  vex_networkdata.cpp  vex_networkdata.h  vex_scan.cpp  vex_scan.h  vex_setup.cpp  vex_setup.h  vex_source.cpp  vex_source.h  vex_stream.cpp  vex_stream.h  vex_subband.cpp  vex_subband.h  vex_utility.cpp  (+4 more)
libraries/difxio/: difxio.h
libraries/difxmessage/: difxmessage.h
libraries/mark5access/: mark5access.h
libraries/mark6sg/: mark6sg.h
mpifxcorr/: CMakeLists.txt  configure.ac
mpifxcorr/src/: Makefile.am  alert.cpp  alert.h  architecture.h.in  configuration.cpp  configuration.h  core.cpp  core.h  cpumode.cpp  cpumode.h  datamuxer.cpp  datamuxer.h  datastream.cpp  datastream.h  fxmanager.cpp  fxmanager.h  gpucore.cpp  gpucore.cu  gpucore.cuh  gpucore.h  gpudecode.cu  gpudecode.cuh  gpumode.cpp  gpumode.cu  gpumode.cuh  gpumode.h  gpumode_kernels.cu  gpumode_kernels.cuh  gpumode_kernels_wg.cu  mark5bfile.cpp  mark5bfile.h  mark5bmark5.cpp  mark5bmark5.h  mark5bmark5_stubs.cpp  mark5bmark6_datastream.cpp  mark5bmark6_datastream.h  mk5.cpp  mk5.h  mk5mode.cpp  mk5mode.h  (+34 more)
mpifxcorr/utils/: dedisperse_difx.cpp  genmachines.py  joblist.py  jobstatus.py  startdifx.py
utilities/misc/: dir2filelist.pl  filterDifx2Fits.py  filterDifx2Mark4.py  geteop.pl  pcList.pl
utilities/vis2screen/: Makefile.am  diffDiFX.py
(+239 files in other folders)
