
#===========================================================================
# SVN properties (DO NOT CHANGE)
#
# $Id: Makefile.am 9172 2019-09-19 12:21:16Z ChrisPhillips $
# $HeadURL: $
# $LastChangedRevision: 9172 $
# $Author: ChrisPhillips $
# $LastChangedDate: 2019-09-19 22:21:16 +1000 (Thu, 19 Sep 2019) $
#
#============================================================================

dist_bin_SCRIPTS = \
	difxspeed \
	oms2v2d \
	vlog \
	mk62v2d
